# IpcMsg

./: README.md
IpcMsg/: CMakeLists.txt  main.cpp
IpcMsg/IpcMsg/: CMakeLists.txt
IpcMsg/IpcMsg/include/: Socket.h
IpcMsg/IpcMsg/src/: IpcMsg.cpp  Socket.cpp
IpcMsg/include/IpcMsg/: IpcMsg.h
